fix: cleanup java files